Improve MyProfile styling and add responsiveness; enhanced the MyProfile component to have a consistent look with MyProfileEdit. Updated CSS for better layout, added background color, shadow, and adjusted text and avatar styles. Enhanced responsiveness to ensure the component looks good on both desktop and mobile devices. Adjusted padding, margins, and text sizes for better readability and visual appeal.

--- a/BarterNet/src/components/MyProfileEdit/MyProfileEdit.module.css
+++ b/BarterNet/src/components/MyProfileEdit/MyProfileEdit.module.css
@@ -8,7 +8,7 @@
 
 .header {
   color: var(--text-color);
-  font-size: 28px;
+  font-size: 24px;
   margin: 40px 0 40px 20px;
   font-weight: bold;
   width: 100%;
